--- a/.github/workflows/update-changelog.yml
+++ b/.github/workflows/update-changelog.yml
@@ -5,6 +5,7 @@ on:
     types: [closed]
     branches:
       - main
+      - develop
 
 jobs:
   update-changelog:
@@ -20,7 +21,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: main
+          ref: ${{ github.base_ref }}
           token: ${{ secrets.PAT_TOKEN }}
           
       - name: Get PR title and body
@@ -156,7 +157,8 @@ jobs:
           git config --global user.name "github-actions[bot]"
           
           # Create branch and commit changes with error handling
-          BRANCH_NAME="bot/update-changelog-v${NEW_VERSION}"
+          TARGET_BRANCH="${{ github.base_ref }}"
+          BRANCH_NAME="bot/update-changelog-v${NEW_VERSION}-${TARGET_BRANCH}"
           if ! git checkout -b "$BRANCH_NAME"; then
             echo "Error: Failed to create new branch"
             exit 1
@@ -185,13 +187,14 @@ jobs:
           ### Changes
           - Type: ${CHANGE_TYPE}
           - Original PR Title: ${PR_TITLE}
+          - Target Branch: ${TARGET_BRANCH}
 
           This is an automated update by the changelog workflow."
           
           if ! gh pr create \
             --title "docs: update changelog for v${NEW_VERSION}" \
             --body "$PR_BODY" \
-            --base main \
+            --base "$TARGET_BRANCH" \
             --head "$BRANCH_NAME"; then
             echo "Warning: Failed to create PR, but changes were pushed to branch"
           fi
